[package]
name = "actix-async-await"
version = "0.4.0-alpha.0"
edition = "2018"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
keywords = ["actix", "futures", "actor", "tokio", "async"]
categories = ["asynchronous"]
description = "Experimental async/await support for Actix"
repository = "https://github.com/Kroisse/actix-async-await"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "actix_async_await"

[dependencies.actix]
version = "0.7"
default-features = false

[dependencies.actix-web]
version = "0.7"
optional = true
default-features = false

[dependencies.futures-core-preview]
version = "0.3.0-alpha.13"
default-features = false

[dependencies.futures-util-preview]
version = "0.3.0-alpha.13"
default-features = false
features = [ "compat" ]

[dev-dependencies]
tokio = "0.1.15"

[package.metadata.docs.rs]
features = ["actix-web"]
